landing page modified

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <header class="container">
         <div class="nav">
-            <h2>Priscilla Arike <span>Adesina</span></h2>
+            <h2><a href="index.html">Priscilla Arike <span>Adesina</span></a></h2>
             <ul class="nav-bar">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
