--- a/landingPage.html
+++ b/landingPage.html
@@ -11,16 +11,9 @@
     <div class="container">
         <div class="innerContainer">
             <div class="text">
-                <h2>Priscilla Arike Adesina</h2>
-                <button><a href="#">Enter Now</a></button>
+                <h2>Priscilla Arike Adesina</br> <button><a href="index.html">Enter Now</a></button></br></h2>
             </div>
-            <div class="social-links">
-                <a href="#"><img src="icons8-facebook-48.png"></a>
-                <a href="#"><img src="icons8-instagram-48.png"></a>
-                <a href="#"><img src="icons8-twitter-48.png"></a>
-                <a href="#"><img src="icons8-whatsapp-48.png"></a>
-                <a href="#"><img src="icons8-youtube-48.png"></a>
-            </div>
+            <img src="images/image0.jpeg">
         </div>
     </div>
 </body>
