--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="books.html">BOOKS</a></li>
-                <li><a href="#">BLOG</a></li>
+                <li><a href="blog.html">BLOG</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
             <button class="blog-button"><a href="#">Arike Blog</a></button>
