--- a/blog.html
+++ b/blog.html
@@ -15,47 +15,48 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="books.html">BOOKS</a></li>
-                <li><a href="#">BLOG</a></li>
+                <li><a href="blog.html">BLOG</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
             <button class="blog-button"><a href="#">Arike Blog</a></button>
         </div>
     </header>
+
     <section class="blog-container">
         <div class="blog-div">
             <div class="side-bar">
-                <h3>Recent Post</h3>
+                <h3 id="heading">Recent Post</h3>
                 <div class="blog-post">
-                    <h4>What God can't do does not exist</h4>
+                    <h4 id="sub-heading" style="margin-top: 10px !important;">What God can't do does not exist</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci similique atque sapiente omnis necessitatibus odio sed consequuntur eos autem! Doloribus, hic qui. Officia quos ullam quidem quod ad placeat magni?</br>Read more</p>
                 </div>
 
                 <div class="blog-post">
-                    <h4>What God can't do does not exist</h4>
+                    <h4 id="sub-heading">What God can't do does not exist</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci similique atque sapiente omnis necessitatibus odio sed consequuntur eos autem! Doloribus, hic qui. Officia quos ullam quidem quod ad placeat magni?</br>Read more</p>
                 </div>
 
                 <div class="blog-post">
-                    <h4>What God can't do does not exist</h4>
+                    <h4 id="sub-heading">What God can't do does not exist</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci similique atque sapiente omnis necessitatibus odio sed consequuntur eos autem! Doloribus, hic qui. Officia quos ullam quidem quod ad placeat magni?</br>Read more</p>
                 </div>
 
                 <div class="blog-post">
-                    <h4>What God can't do does not exist</h4>
+                    <h4 id="sub-heading">What God can't do does not exist</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci similique atque sapiente omnis necessitatibus odio sed consequuntur eos autem! Doloribus, hic qui. Officia quos ullam quidem quod ad placeat magni?</br>Read more</p>
                 </div>
 
                 <div class="blog-post">
-                    <h4>What God can't do does not exist</h4>
+                    <h4 id="sub-heading">What God can't do does not exist</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci similique atque sapiente omnis necessitatibus odio sed consequuntur eos autem! Doloribus, hic qui. Officia quos ullam quidem quod ad placeat magni?</br>Read more</p>
                 </div>
             </div>
 
             <div class="main-blog">
-                <h3>What God can't do does not exist</44>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos voluptatem soluta, sed commodi repudiandae repellendus unde! Esse praesentium velit ad laboriosam, expedita fugiat quis quo ipsa asperiores aliquam a dolor?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum aspernatur, cum porro nostrum temporibus eius quaerat voluptates incidunt molestias ea perferendis eos facilis voluptate quisquam est quas ad. Excepturi,Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quas, minima reiciendis culpa recusandae repellendus quidem non maxime quis quibusdam placeat quia aliquam cumque at cupiditate modi voluptate repellat magnam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos voluptatem soluta, sed commodi repudiandae repellendus unde! Esse praesentium velit ad laboriosam, expedita fugiat quis quo ipsa asperiores aliquam a dolor?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum aspernatur, cum porro nostrum temporibus eius quaerat voluptates incidunt molestias ea perferendis eos facilis voluptate quisquam est quas ad. Excepturi,Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quas, minima reiciendis culpa recusandae repellendus quidem non maxime quis quibusdam placeat quia aliquam cumque at cupiditate modi voluptate repellat magnam.</p>
-                <p>What is Lorem Ipsum?
+                <h3 style="margin-top: 0 !important; font-size: 30px;" id="sub-heading">What God can't do does not exist</44>
+                <p id="main-blog_paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos voluptatem soluta, sed commodi repudiandae repellendus unde! Esse praesentium velit ad laboriosam, expedita fugiat quis quo ipsa asperiores aliquam a dolor?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum aspernatur, cum porro nostrum temporibus eius quaerat voluptates incidunt molestias ea perferendis eos facilis voluptate quisquam est quas ad. Excepturi,Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quas, minima reiciendis culpa recusandae repellendus quidem non maxime quis quibusdam placeat quia aliquam cumque at cupiditate modi voluptate repellat magnam.</p>
+                <p id="main-blog_paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos voluptatem soluta, sed commodi repudiandae repellendus unde! Esse praesentium velit ad laboriosam, expedita fugiat quis quo ipsa asperiores aliquam a dolor?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum aspernatur, cum porro nostrum temporibus eius quaerat voluptates incidunt molestias ea perferendis eos facilis voluptate quisquam est quas ad. Excepturi,Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quas, minima reiciendis culpa recusandae repellendus quidem non maxime quis quibusdam placeat quia aliquam cumque at cupiditate modi voluptate repellat magnam.</p>
+                <p id="main-blog_paragraph">What is Lorem Ipsum?
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                     
                     Why do we use it?
@@ -72,5 +73,20 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="footer-text">
+            <h4>PRISCILLA ARIKE ADESINA</h4>
+            <p>&copy; 2023 Priscilla Arike Adesina</p>
+            <p>All Right Reserved</p>
+        </div>
+                <div class="social-links">
+            <a href="#"><img src="images/icons8-facebook-48.png"></a>
+            <a href="#"><img src="images/icons8-instagram-48.png"></a>
+            <a href="#"><img src="images/icons8-twitter-48.png"></a>
+            <a href="#"><img src="images/icons8-whatsapp-48.png"></a>
+            <a href="#"><img src="images/icons8-youtube-48.png"></a>
+        </div>    
+    </footer>
 </body>
 </html>
