--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="books.html">BOOKS</a></li>
-                <li><a href="#">BLOG</a></li>
+                <li><a href="blog.html">BLOG</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
             <button class="blog-button"><a href="#">Arike Blog</a></button>
@@ -78,7 +78,7 @@
             </div>
         </div>
 
-        <button class="see-all-news"><a href="#">READ MORE</a></button>
+        <button class="see-all-news"><a href="blog.html">READ MORE</a></button>
     </section>
 
     <footer>
