--- a/books.html
+++ b/books.html
@@ -18,7 +18,7 @@
                 <li><a href="blog.html">BLOG</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
-            <button class="blog-button"><a href="#">Arike Blog</a></button>
+            <button class="blog-button"><a href="blog.html">Arike Blog</a></button>
         </div>
     </header>
 
